login form progress

--- a/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
@@ -17,5 +17,17 @@
     <input matInput placeholder="Hasło">
   </mat-form-field>
 </div>
+<div class="zaloguj">
+  <button mat-raised-button color="primary">Zaloguj</button>
+</div>
 
-
+<div class="other-options">
+  <div class="ask">
+    Nie masz konta?
+  </div>
+  <div class="ask">
+      Zapomniałeś hasła?
+  </div>
+  <button mat-raised-button color="warn">Rejestracja</button>
+  <button mat-raised-button color="warn">Przypomnij hasło</button>
+</div>
