fix dialog warnings

--- a/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
@@ -2,7 +2,7 @@
   <p>
     Logowanie
   </p>
-  <mat-icon class="x" aria-hidden="false" aria-label="Example home icon" (click)="onNoClick()">clear</mat-icon>
+  <mat-icon class="x" aria-hidden="false" aria-label="Example home icon" (click)="closeDialog()">clear</mat-icon>
 </div>
 
 <div class="content">
