finalling register form

--- a/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
@@ -7,10 +7,10 @@
 
 <div class="content">
   <div class="icon" >
-  <mat-icon aria-hidden="false" aria-label="Example home icon">account_box</mat-icon>
+  <mat-icon aria-hidden="false" aria-label="Example home icon">email</mat-icon>
 </div>
   <mat-form-field>
-    <input matInput placeholder="Login">
+    <input matInput placeholder="E-mail">
   </mat-form-field>
   <mat-icon aria-hidden="false" aria-label="Example home icon">lock</mat-icon>
   <mat-form-field>
