--- a/frontend/src/app/feature-modules/main-page/components/register-form/register-form.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/register-form/register-form.component.html
@@ -6,15 +6,41 @@
 </div>
 
 <div class="content">
-  <div class="icon" >
-  <mat-icon aria-hidden="false" aria-label="Example home icon">account_box</mat-icon>
-</div>
+  <mat-icon aria-hidden="false" aria-label="Example home icon">email</mat-icon>
   <mat-form-field>
-    <input matInput placeholder="Login">
+    <input matInput placeholder="E-mail">
   </mat-form-field>
   <mat-icon aria-hidden="false" aria-label="Example home icon">lock</mat-icon>
+  <div class="col-2">
   <mat-form-field>
     <input matInput placeholder="Hasło">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Powtórz hasło">
+  </mat-form-field>
+  <br><br>
+  </div>
+
+  <mat-icon aria-hidden="false" aria-label="Example home icon">account_box</mat-icon>
+  <div class="col-2">
+  <mat-form-field>
+    <input matInput placeholder="Imię">
+  </mat-form-field>
+  <mat-form-field>
+    <input matInput placeholder="Nazwisko">
+  </mat-form-field>
+  </div>
+  <mat-icon aria-hidden="false" aria-label="Example home icon">layers</mat-icon>
+  <mat-form-field>
+    <input matInput placeholder="Uczelnia">
+  </mat-form-field>
+  <mat-icon aria-hidden="false" aria-label="Example home icon">bookmark</mat-icon>
+  <mat-form-field>
+    <input matInput placeholder="Wydział">
+  </mat-form-field>
+  <mat-icon aria-hidden="false" aria-label="Example home icon">work</mat-icon>
+  <mat-form-field>
+    <input matInput placeholder="Kierunek">
   </mat-form-field>
 </div>
 <div class="zaloguj">
@@ -23,7 +49,7 @@
 
 <div class="other-options">
   <div class="ask">
-    Masz już konto?
+    Posiadasz konto?
   </div>
   <div class="ask">
   </div>
