--- a/frontend/src/app/feature-modules/main-page/components/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="item link"><b>ThesisHub</b></div>
+  <div class="item link"><b>Logo</b></div>
   <div class="item"></div>
   <div class="item link" (click)="openLoginDialog()">Logowanie</div>
   <div class="item link">2</div>
