--- a/frontend/src/app/feature-modules/user-panel/components/header/header.component.scss
+++ b/frontend/src/app/feature-modules/user-panel/components/header/header.component.scss
@@ -1,5 +1,6 @@
 .header {
   display: grid;
   top: 0;
-  background-color: rgb(219, 219, 219);
+  background-color: rgb(218, 220, 255);
+  color: white;
 }
