--- a/frontend/src/app/feature-modules/user-panel/components/side-bar/side-bar.component.scss
+++ b/frontend/src/app/feature-modules/user-panel/components/side-bar/side-bar.component.scss
@@ -1,4 +1,20 @@
 .side-bar {
+  top: 0;
+  color: White;
   height: 100%;
-  background-color: rgb(209, 209, 209);
+  background-color: rgb(203, 206, 255);
+  .item {
+    margin: 1px;
+    padding: 10px;
+    background-color: rgb(169, 176, 253);
+    cursor: pointer;
+  }:hover {
+    background-image: linear-gradient(0deg, rgb(0, 162, 255), yellow);
+  }
+  .logo {
+    top: 0;
+    font-size: 1.6rem;
+    font-weight: 500;
+    background-color: rgb(194, 197, 255);
+  }
 }
