use register errors

--- a/frontend/src/app/feature-modules/main-page/components/register-form/register-form.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/register-form/register-form.component.html
@@ -118,6 +118,9 @@
 
   <div class="register">
     <button mat-raised-button color="primary">Rejestracja</button>
+    <div class="errorInfo errorMessage">
+      {{errorMessage}}
+    </div>
   </div>
 </form>
 <div class="other-options">
