--- a/frontend/src/app/feature-modules/main-page/components/register-form/register-form.component.scss
+++ b/frontend/src/app/feature-modules/main-page/components/register-form/register-form.component.scss
@@ -47,7 +47,11 @@
 }
 
 .errorInfo {
-  font-size: .6em;
+  font-size: .8em;
   color: red;
+}
+.errorMessage {
+  text-align: center;
+  margin: 4px;
 }
 
