--- a/frontend/src/app/feature-modules/user-panel/components/header/header.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/header/header.component.html
@@ -1,3 +1,6 @@
 <div class="header">
-<p>header</p>
+<div class="item">Header</div>
+<div class="item"></div>
+<div class="item link" (click)="logout()">Wyloguj</div>
 </div>
+
