--- a/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/login-form/login-form.component.html
@@ -32,5 +32,5 @@
     Zapomniałeś hasła?
   </div>
   <button mat-raised-button color="warn" (click)=openRegisterDialog()>Rejestracja</button>
-  <button mat-raised-button color="warn">Przypomnij hasło</button>
+  <button mat-raised-button color="warn" (click)=openRemindDialog()>Przypomnij hasło</button>
 </div>
