--- a/frontend/src/app/feature-modules/user-panel/components/header/header.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header">
-<div class="item">Header</div>
+<div class="item">Witaj {{userDetails.firstName}}</div>
 <div class="item"></div>
 <div class="item link" (click)="logout()">Wyloguj</div>
 </div>
