add reset passowrd dialog

--- a/frontend/src/app/feature-modules/main-page/components/reset-password/reset-password.component.html
+++ b/frontend/src/app/feature-modules/main-page/components/reset-password/reset-password.component.html
@@ -1,10 +1,10 @@
 <div class="label">
   <p>
-    Logowanie
+    Resetowanie hasła
   </p>
   <mat-icon class="x" aria-hidden="false" aria-label="Example home icon" (click)="closeDialog()">clear</mat-icon>
 </div>
-<form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="resetForm">
   <div class="content">
     <div class="icon">
       <mat-icon aria-hidden="false" aria-label="Example home icon">email</mat-icon>
@@ -12,16 +12,9 @@
     <mat-form-field>
       <input matInput placeholder="E-mail" formControlName="email">
     </mat-form-field>
-    <mat-icon aria-hidden="false" aria-label="Example home icon">lock</mat-icon>
-    <mat-form-field>
-      <input matInput placeholder="Hasło" formControlName="password" name="password" type="password">
-    </mat-form-field>
   </div>
   <div class="zaloguj">
-    <button mat-raised-button color="primary">Zaloguj</button>
-    <div class="errorInfo errorMessage">
-      {{errorMessage}}
-    </div>
+    <button mat-raised-button color="primary">Resetuj hasło</button>
   </div>
 </form>
 <div class="other-options">
@@ -31,6 +24,6 @@
   <div class="ask">
     Zapomniałeś hasła?
   </div>
+  <button mat-raised-button color="warn" (click)=openLoginDialog()>Logowanie</button>
   <button mat-raised-button color="warn" (click)=openRegisterDialog()>Rejestracja</button>
-  <button mat-raised-button color="warn" (click)=openResetDialog()>Przypomnij hasło</button>
 </div>
