add profile window, add new groups

--- a/frontend/src/app/feature-modules/user-panel/components/side-bar/side-bar.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
 <div class="side-bar">
     <div class="logo">Logo</div>
-    <div class="item">Profil</div>
+    <div class="item" routerLink="profile">Profil</div>
     <div class="item">Czat</div>
     <div class="item">Moje Pliki</div>
-    <div class="item">Grupa</div>
+    <div class="item" routerLink="group">Grupa</div>
   </div>
