--- a/frontend/src/app/feature-modules/user-panel/components/user-content/user-content.component.scss
+++ b/frontend/src/app/feature-modules/user-panel/components/user-content/user-content.component.scss
@@ -1,12 +1,14 @@
 .body {
   display: grid;
   grid-template-columns: 1fr 7fr;
+  background-color: rgb(240, 241, 255);
 }
 
 .content{
   top: 0;
   .outlet {
-    display: grid;
+    // display: grid;
+    top: 0;
     background-color: rgb(240, 241, 255);
     min-height: 600px;
   }
