--- a/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/profile/profile.component.html
@@ -1,3 +1,15 @@
-<p>
-  profile works!
-</p>
+<div class="content">
+<h1>Profil:</h1>
+<div class="tab">
+  <div class="item">Imię:</div>
+  <div class="item">{{userDetails.firstName}}</div>
+  <div class="item">Nazwisko:</div>
+  <div class="item">{{userDetails.lastName}}</div>
+  <div class="item">e-mail:</div>
+  <div class="item">{{userDetails.email}}</div>
+  <div class="item">Wydział:</div>
+  <div class="item">{{userDetails.department}}</div>
+  <div class="item">Uczelnia:</div>
+  <div class="item">{{userDetails.college}}</div>
+</div>
+</div>
