add groups and users to groups

--- a/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.scss
+++ b/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.scss
@@ -1,7 +1,6 @@
 .content {
   display: grid;
-  // top: 50px;
-  margin: 50px;
+  // margin: 50px;
 }
 
 .header {
@@ -10,17 +9,14 @@
   margin-bottom: 20px;
 }
 
-button {
-  margin: 20px;
-}
-
-mat-form-field {
-  width: 300px;
-}
 table {
   width: 100%;
+  margin: 0;
 }
+
 mat-accordion {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+
