fix user details

--- a/frontend/src/app/feature-modules/user-panel/components/side-bar/side-bar.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/side-bar/side-bar.component.html
@@ -2,6 +2,6 @@
     <div class="logo">Logo</div>
     <div class="item" [routerLink]="['/user-panel/profile', userID]">Profil</div>
     <div class="item">Czat</div>
-    <div class="item">Moje Pliki</div>
+    <div class="item" routerLink="files">Moje Pliki</div>
     <div class="item" routerLink="group">Grupa</div>
   </div>
