--- a/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.html
+++ b/frontend/src/app/feature-modules/user-panel/components/group-detail/group-detail.component.html
@@ -13,7 +13,7 @@
       </mat-expansion-panel-header>
 
       <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="usersList$ | async">
+        <table mat-table [dataSource]="usersList$">
 
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> Imię i nazwisko</th>
